tests/e2e/semantics/index_invalid.story
a = [1, 2]
t = 5s
b = a[t]
